2010-05-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c   [Bug #2987995]: Tk_getOpenFile returns garbage under
	described circumstances. Backported some formatting from trunk.

2010-05-03  Donal K. Fellows  <dkf@users.sf.net>

	* library/button.tcl (CheckInvoke, CheckEnter): [Patch 1530276 redux]:
	Apply a bit more care to ensure that things continue to work correctly
	even when there is no -selectcolor defined.

2010-04-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinPort.h: Fix [Patch 2986105]: conditionally defining
	strcasecmp/strncasecmp
	* win/tkWinDialog.c: Fix [Bug 2987995]: Tk_GetOpenFile returns garbage
	under described circumstances, minor formatting.
	* win/tkWinDialog.c: [Patch 2898255]: Filenames limit with
	Tk_GetFileName().
	Assure modern style dialogs where available

2010-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkButton.h:	[Bug 2956548]: TkpButtonSetDefaults only
	* generic/tkButton.c:	initializes one button type
	* win/tkWinButton.c:
	* win/tkWinEmbed.c:	Fix various gcc warnings, all
	* win/tkWinMenu.c:	backported from Tk 8.6
	* win/tkWinPixmap.c:
	* win/tkWinSend.c:
	* win/tkWinTest.c:
	* win/tkWinWm.c:
	* win/tkWinX.c:
	* win/tkWinInt.h:	VC6++ does not have SPI_SETKEYBOARDCUES
	* win/.cvsignore:

2010-03-11  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (DumpLine): [Bug 2968379]: When peers are about,
	there can be unnamed marks present during a dump. Ignore them as they
	will just be for the peers' insert and current marks, which aren't
	very important.

2010-03-04  Donal K. Fellows  <dkf@users.sf.net>

	* doc/clipboard.n: Added note about STRING vs. UTF8_STRING types.

2010-02-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (TextEditCmd): [Bug 1799782]: Refix this, so that
        <<Modified>> events are issued when things change.

2010-02-19  Donal K. Fellows  <dkf@users.sf.net>

	* unix/installManPage: [Tcl Bug 2954638]: Correct behaviour of manual